# vibeclip

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  SECURITY.md  SOCIAL_PLAN.md  docker-compose.yml  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
chat/: agent.py  app.py  auth.py  automation.py  blog_content.py  blog_render.py  cli.py  emailer.py  export_nle.py  gc.py  instagram.py  jobs.py  mcp_bridge.py  planner.py  repurpose.py  secretbox.py  session.py  social.py  social_db.py  social_providers.py  timeline_view.py  tools.py  webutil.py  youtube.py
docs/: PALMIER_BUILD_PLAN.md  PALMIER_VIDEO_ANALYSIS.md  PRO_GAP_MATRIX.md  PRO_PLAN.md  README.tr.md  STUDIO2_UI_DESIGN.md
pipeline/: assets.py  audio.py  brand.py  broll.py  captions.py  captions_ass.py  colorfx.py  config.py  cut.py  denoise.py  dub.py  editplan.py  effects.py  fillers.py  genmedia.py  highlights.py  jumpcut.py  media.py  nethttp.py  orchestrate.py  overlayfx.py  pacing.py  perception.py  progress.py  proxy.py  reframe.py  safearea.py  segmenter.py  sfx.py  soundbed.py  speed.py  splitscreen.py  storyboard.py  structure.py  style_learn.py  styles.py  subtitle.py  timebase.py  timemap.py  tracking.py  (+3 more)
scripts/: prod_deploy.sh  render_gameplay_demo.py  render_landing_demo.py
studio/: index.html  package-lock.json  package.json  vite.config.js
tests/: test_add_broll_generate.py  test_assemble_reel.py  test_automation.py  test_byok.py  test_caption_engine.py  test_captions_ass.py  test_config.py  test_dnn_reframe.py  (+28 more)
(+53 files in other folders)
