[project]
name = "shorts-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "mcp[cli]>=1.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "rich>=13",
    "uvicorn>=0.49.0",
]
