[project]
name = "vibeclip"
version = "0.1.0"
description = "VibeClip — the AI video editor you control by talking. Turns long videos into vertical, captioned shorts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "mcp[cli]>=1.2.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "rich>=13",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
# Make the repo-root `chat`/`pipeline` packages importable under a bare
# `uv run pytest` (and in CI), without requiring PYTHONPATH to be set.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["assets", "outputs", "cache", "docs"]

[tool.ruff.lint]
# Pragmatic for an existing codebase: catch real breakage (syntax, undefined
# names, unused imports) without failing on long-standing style nits.
select = ["E4", "E7", "E9", "F"]
ignore = ["E741", "F841"]
